--- a/fetch.html
+++ b/fetch.html
@@ -20,6 +20,6 @@
             
         </tbody>
     </table>
-    <script src="script.js"></script>
+    <script src="scrpit1.js"></script>
 </body>
 </html>
